--- a/apps/web/index.html
+++ b/apps/web/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>mss-showcase demo mobilapp</title>
+    <title>mss-showcase demo webapp</title>
   </head>
   <body>
     <div id="root"></div>
