--- a/apps/web/index.html
+++ b/apps/web/index.html
@@ -3,10 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>mss-showcase demo webapp</title>
+    <title>Web Application</title>
+    <link rel="stylesheet" href="/src/theme/theme.css" />
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/main.tsx"></script>
+    <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
