--- a/apps/web/index.html
+++ b/apps/web/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Web Application</title>
+	<title>MSS Showcase web application</title>
     <link rel="stylesheet" href="/src/theme/theme.css" />
   </head>
   <body>
